--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Demo App</title>
   </head>
   <body>
-    <h1>Hello World?</h1>
+    <h1>Hello World!</h1>
     <script src="bundle.js"></script>
   </body>
 </html>
